This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
8/10/23: SEM_4-1-0beta21
8/10/23: Added script command to report if a camera is inserted.

8/10/23: Fixed problem in ctffind library that impaired accuracy on lower dose
images.

8/10/23: SEM_4-0-27
8/10/23: Fixed crash taking an image if Low Dose hidden on startup (In 4.0).

8/9/23: Fixed K3 on GIFs with fast shutter having a default duty cycle of 50%
in CDS mode and throwing away half the signal; this applies to systems with
EELS (e.g., Quantum K3 1069 and BiocontinuumHD (1067HD with EELS)  (In 4.0).

8/4/23: Changed criterion for kV warning on starting from > 1 to > 0.8.

8/4/23: Added script commands to report multishot vectors in image shift units
and to return a list of holes to be acquired for an item.

8/4/23: Replaced field validation in Ctffind parameters, Hole Finder,
Eucentricity by Focus, Autocontouring, and Beam Aucentering setup dialogs.

8/2/23: Replaced Microsoft validation of text fields, which was giving "Enter
a number" errors on some systems, in Montage Setup, Tilt Series Setup,
Navigator Acquire, and  Multiple Record setup dialog.

8/2/23: When using "Eucentric-Both" in Low Dose, it will now switch between
Search and View if appropriate for the fine operation.

7/24/23: Prevented recursive variable substitutions; only variables originally
present in a line will be substituted.

7/22/23: Added option to multi-hole combiner to use just the position of the
central point instead of averaging positions from all points in a pattern, and
stabilized the point labels so they stay in same position.

7/22/23: Fixed Ctrl-Left click for selecting a point by changing the new map
loading to Shift-Middle-double click.
