@@ -313,6 +313,11 @@ protected:
   short int mKeepOrRestoreArea[MAX_LOWDOSE_SETS];    // -1 to keep or 1 to restore an area
   double mSleepStart;  // Starting time to sleep from
   double mSleepTime;   // Number of ticks (msec) to sleep
+  bool mWaitingForMarker; //  Flag that we are waiting for a new marker point
+  BOOL mStartedWithMarker;  // Flag that there was a marker on that image already
+  float mOldMarkerX, mOldMarkerY;   // Starting value if any
+  double mMarkerTimeStamp;  // Time stamp of image
+  int mMarkerImageCapFlag;  // mCaptured value of image too
   BOOL mMovedStage;       // Flag that stage should be checked
   BOOL mExposedFilm;   // Flag that film should be checked
   BOOL mMovedScreen;
