@@ -3709,7 +3709,7 @@ MoveStage 0 0 -$zRange / 2.
         on the scope computer. &nbsp; If this occurs, set the environment variable 
         FEISEMSERVER_AUTOMATION to 0 to prevent any automation-based operations from 
         being attempted.&nbsp; </p>
-      <p>For Thermo/FEI server version 7.17 and higher, the new 
+      <p>For Thermo/FEI server version 7.18 and higher, the new 
         Utapi scripting can be used to control the apertures.&nbsp; Access to this 
         scripting is activated with a property 'UseUtapiScripting 1'.</p>
       <p>&nbsp;</p>
